@@ -1,5 +1,9 @@
 language: r
 
+r:
+  - release
+  - devel
+
 cache: packages
 
 sudo: required
