@@ -1,5 +1,5 @@
 Package: SnakeCharmR
-Version: 1.0.5
+Version: 1.0.6
 Date: 2017-03-13
 Title: R and Python Integration
 Author: Alexandre Sieira, forked off of rPython by Carlos J. Gil Bellosta
