@@ -2,7 +2,9 @@ SnakeCharmR 1.0.6
 =================
 Fixed compilation on Python 3, fixing https://github.com/asieira/SnakeCharmR/issues/33. Thanks to https://github.com/lfdmotta for reporting this.
 
-Updated Travis tests to cover Python 2 and 3, and also to cover all major versions of R.
+Updated Travis tests to cover Python 2 and 3, and also current and devel versions of R.
+
+Startup message will now include contents of Python `sys.version` information.
 
 
 SnakeCharmR 1.0.5
